--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
    <body>
 
-      <iframe src='https://webchat.botframework.com/embed/WebChatPushNotification?s=-V273q_68g0.cwA.cI4.gxTi70475GSbmLmmZ7UXzcx0fiIBP4IEL3CHNA6ot48'>
-
+      <iframe src='https://webchat.botframework.com/embed/WebChatPushNotification?s=-V273q_68g0.cwA.cI4.gxTi70475GSbmLmmZ7UXzcx0fiIBP4IEL3CHNA6ot48'
       style="height: 502px; max-height: 502px;"></iframe>
 
    </body>
