--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,8 @@
 
 <body>
     <div id="bot">
-        <iframe src='https://webchat.botframework.com/embed/Cobra?s=e60qWZRDaTc.cwA.2c8.HawVI7X6QqOZbFAr1GZdu_QKqY1IkaM0p9A00h4S2XQ'></iframe>
+        <iframe src='https://webchat.botframework.com/embed/Cobra?s=e60qWZRDaTc.cwA.2c8.HawVI7X6QqOZbFAr1GZdu_QKqY1IkaM0p9A00h4S2XQ'
+        style="height: 500px; width: 100%; margin-top: -40px;"></iframe>
     </div>
     <script src="https://unpkg.com/botframework-directlinejs/directLine.js"></script>
     <script src="https://unpkg.com/botframework-webchat/botchat.js"></script>
