--- a/web/index.html
+++ b/web/index.html
@@ -37,9 +37,9 @@
 <!--<script src="/botchat.js"></script>-->
     <script>
         BotChat.App({
-            directLine: { secret: direct_line_secret },
-            user: { id: 'userid' },
-            bot: { id: 'botid' },
+            directLine: { secret: '33d__JpR8Lc.cwA.BFI.cZp1btms6zmaFya-LsQhRXm_8mH5iS-QOD4Xpwj2-Gw' },
+            user: { id: 'human' },
+            bot: { id: 'cobra' },
             resize: 'detect'
         }, document.getElementById("bot"));
     </script>
